k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-portal-deployment
  namespace: portal-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-portal
  template:
    metadata:
      labels:
        app: eks-portal
    spec:
      serviceAccountName: eks-portal-sa
      containers:
        - name: eks-portal-container
          image: eks-portal:placeholder  # Pipeline isse replace kar degi
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
