k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-portal-service
  namespace: portal-system
spec:
  type: NodePort
  selector:
    app: eks-portal
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
